--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 * text=auto eol=lf
 *.x86_64 filter=lfs diff=lfs merge=lfs -text
 godot.x86_64 filter=lfs diff=lfs merge=lfs -text
+build/* filter=lfs diff=lfs merge=lfs -text
